--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "pdfkit": "^0.17.1",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7",
     "tedious": "^18.6.1"
   },
   "devDependencies": {
