--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "reset-db": "node scripts/resetDb.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
+    "reset-db": "node ./src/scripts/resetDb.js"
   },
   "keywords": [],
   "author": "",
